<resources>
    <string name="app_name">Find the Square</string>
    <string name="logo">Find the Square</string>
    <string name="help_text">Find the Square - a game where you have to find a target colour square in a short space of time.</string>
    <string name="game_score">Score : </string>
    <string name="score_value">0</string>
    <string name="game_time">Time : </string>
    <string name="game_target">Target</string>
    <string name="game_over">Game is over :(</string>
    <string name="your_score">Your score: </string>
    <string name="choose_mode">Choose a game mode</string>
    <string name="your_best_score">Your best score: </string>

    <string name="start_btn">Start</string>
    <string name="help_btn">Help</string>
    <string name="exit_btn">Quit</string>
    <string name="training_btn">Training</string>
    <string name="game_btn">Time mode</string>
    <string name="back_btn">Back</string>
    <string name="retry_btn">Retry</string>
    <string name="king_score">King</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2633165848097716/2107975827</string>

</resources>
