<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/choose_mode"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:onClick="click6x6Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/game_btn"
            android:textStyle="bold"
            android:textSize="25sp"
            android:background="@drawable/button_bkg"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/your_best_score"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/best_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <Button
            android:onClick="clickTrainingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/training_btn"
            android:textStyle="bold"
            android:textSize="25sp"
            android:background="@drawable/button_bkg"
            android:textAllCaps="false"
            android:layout_marginBottom="60dp"
            />

        <Button
            android:onClick="clickBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/back_btn"
            android:textStyle="bold"
            android:textSize="25sp"
            android:background="@drawable/button_bkg"
            android:textAllCaps="false"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>