<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameOverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/game_over"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/game_over_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/your_score"/>

            <TextView
                android:id="@+id/game_over_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:onClick="clickRetryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/retry_btn"
            android:textStyle="bold"
            android:textSize="25sp"
            android:background="@drawable/button_bkg"
            android:textAllCaps="false"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>