<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_score"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_value"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_time"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"

            />
        <Chronometer
            android:id="@+id/timer"
            android:countDown="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_target"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"/>
            <ImageButton
                android:id="@+id/target_square"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <GridLayout
            android:id="@+id/squares_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="6"
            android:columnCount="6"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">
        </GridLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>