<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:columnCount="3"
            android:rowCount="3">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/up_left" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/up_center" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/up_right" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/center_left" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/center" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/center_right" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/bottom_left" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/bottom_center" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:background="@color/bottom_right" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:text="@string/logo"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bkg"
            android:baselineAligned="false"
            android:onClick="clickStartBtn"
            android:text="@string/start_btn"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bkg"
            android:onClick="clickHelpBtn"
            android:text="@string/help_btn"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_bkg"
            android:onClick="clickExitBtn"
            android:text="@string/exit_btn"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>